--- a/algo-sorting/public/index.html
+++ b/algo-sorting/public/index.html
@@ -14,9 +14,16 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;1,600&display=swap" rel="stylesheet">
+
     <title>Sorting visualizer</title>
 
-
+    <style>
+        html,
+        body {
+            font-family: 'Open Sans', sans-serif;
+        }
+    </style>
 </head>
 
 <body>
